// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitLayout renders with a separation width 1`] = `
<SpreadLayout
  center={true}
  className="split-layout allow-responsive"
  responsive={false}
>
  <div
    className="split-layout-child"
    key=".0"
    style={
      Object {
        "marginRight": 5,
      }
    }
  >
    child #1
  </div>
  <div
    className="split-layout-child"
    key=".1"
    style={
      Object {
        "marginRight": 5,
      }
    }
  >
    child #2
  </div>
  <div
    className="split-layout-child"
    key=".2"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child #3
  </div>
</SpreadLayout>
`;

exports[`SplitLayout renders with multiple children 1`] = `
<SpreadLayout
  center={true}
  className="split-layout"
  responsive={false}
>
  <div
    className="split-layout-child"
    key=".0"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child #1
  </div>
  <div
    className="split-layout-child"
    key=".1"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child #2
  </div>
  <div
    className="split-layout-child"
    key=".2"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child #3
  </div>
</SpreadLayout>
`;

exports[`SplitLayout renders with one child 1`] = `
<SpreadLayout
  center={true}
  className="split-layout"
  responsive={false}
>
  <div
    className="split-layout-child"
    key=".0"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child
  </div>
</SpreadLayout>
`;

exports[`SplitLayout renders with responsive property 1`] = `
<SpreadLayout
  center={true}
  className="split-layout allow-responsive"
  responsive={false}
>
  <div
    className="split-layout-child"
    key=".0"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child #1
  </div>
  <div
    className="split-layout-child"
    key=".1"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child #2
  </div>
  <div
    className="split-layout-child"
    key=".2"
    style={
      Object {
        "marginRight": undefined,
      }
    }
  >
    child #3
  </div>
</SpreadLayout>
`;
